--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,16 @@ AUTH_MODEL=App\User
 CACHE_DRIVER=cookie
 SESSION_DRIVER=cookie
 QUEUE_DRIVER=cookie
+
+MAIL_DRIVER=smtp
+MAIL_HOST=mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME=null
+
+CONTACT_NAME=null
+CONTACT_EMAIL=null
+CONTACT_PHONE=null
