--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "laravel/lumen-framework": "5.0.*",
-        "vlucas/phpdotenv": "~1.0"
+        "vlucas/phpdotenv": "~1.0",
+        "illuminate/mail": "~5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
@@ -17,6 +18,9 @@
         },
         "classmap": [
             "database/"
+        ],
+        "files": [
+            "utils/helpers.php"
         ]
     },
     "config": {
