--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "jquery": "~2.1.3",
     "ractive": "~0.7.2",
     "rv": "~0.1.8",
-    "requirejs": "~2.1.17"
+    "requirejs": "~2.1.17",
+    "font-awesome": "fontawesome#^4.6.3"
   }
 }
