--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,8 @@ MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
+MAILGUN_DOMAIN="the domain"
+MAILGUN_SECRET="key-123"
 
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME=null
