--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "laravel/lumen-framework": "5.7.*",
-        "vlucas/phpdotenv": "~1.0",
+        "vlucas/phpdotenv": "~2.2",
         "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.0",
+        "composer/composer": "^1.8"
     },
     "autoload": {
         "psr-4": {
