--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "laravel/lumen-framework": "5.7.*",
         "vlucas/phpdotenv": "~2.2",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "illuminate/session": "5.7.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
