--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "laravel/lumen-framework": "5.7.*",
         "vlucas/phpdotenv": "~2.2",
         "guzzlehttp/guzzle": "^6.3",
-        "illuminate/session": "5.7.*"
+        "illuminate/session": "5.7.*",
+        "illuminate/cookie": "5.7.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
