--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "vlucas/phpdotenv": "~2.2",
         "guzzlehttp/guzzle": "^6.3",
         "illuminate/session": "5.7.*",
-        "illuminate/cookie": "5.7.*"
+        "illuminate/cookie": "5.7.*",
+        "illuminate/mail": "5.7.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
